<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ONTOSKETCH</string>
    
    <string name="import_ontology_folder">/mnt/sdcard/Download</string>
    <string name="export_ontology_folder">/mnt/sdcard/Download</string>
    
    <string name="onto_namespace">http://ontosketch.com/</string>
   
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_delete">Delete</string>
    
    <string name="tabname_classes">Concepts</string>
    <string name="tabname_properties">Relations</string>
    <string name="tabname_individuals">Real elements</string>
    
    <string name="concept">Concept</string>
    <string name="individual">Real element</string>

    <string name="scrolllabel_concrete">SPECIFIC</string>
    <string name="scrolllabel_abstract">ABSTRACT</string>
    <string name="scrolllabel_center">|</string>
    
    <string name="placeholder">PLACEHOLDER</string>
    
    <string name="individual_class_of">ofClass</string>
    
    <string name="ontopanel_hint_text">Please import an ontology first!</string>
    
    <string name="wrong_relation_1">A relation between</string>
    <string name="wrong_relation_2">is not allowed!</string>
    
    <string name="relation_subconcept">is sub concept of</string>
    <string name="relation_instanziation">is of type</string>
    
    <integer-array name="formalizedConceptDimension">
        <item>215</item>
        <item>95</item>
    </integer-array>
    
    <integer-array name="formalizedIndividualDimension">
        <item>215</item>
        <item>55</item>
    </integer-array>
    
    <integer-array name="sizes">
        <item name="subclass">20</item>
        <item name="propertyRelation">20</item>
        <item name="instanziation">10</item>
        <item name="formalizedClass">20</item>
        <item name="formalizedIndividual">20</item>
        <item name="drawnClass">20</item>
        <item name="drawnIndividual">20</item>
        <item name="instanziationStroke">50</item><!-- 20 -->
    </integer-array>

</resources>